--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,6 +1,10 @@
 .navbar {
   display: flex;
-  padding-top: 20rpx;
+  position:fixed;
+  top: 0;
+  z-index: 500;
+  width: 100%;
+  /* padding-top: 20rpx; */
   padding-bottom: 20rpx;
   background-color: #349fe2;
 }
@@ -17,4 +21,25 @@
 }
 .navbar-item-on {
   font-weight: bold;
+}
+.scroll {
+  position: absolute;
+  top: 100rpx;
+}
+.news {
+  display: flex;
+  padding: 20rpx;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.news-author {
+  display: flex;
+  font-size: 15rpx;
+}
+.news-text {
+  display: grid;
+}
+.image {
+  height: 200rpx;
+  width: 400rpx;
+
 }
