--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,7 +7,7 @@
 </view>
 <view class='scroll'>
   <scroll-view scroll-y="true">
-    <view class='news' wx:for="{{news}}" bindtap="onItemClick">
+    <view class='news' wx:for="{{news}}" wx:for-item="item" data-id="{{item.id}}" bindtap="onItemClick">
       <view class='news-text'>
         <view>{{item.title}}</view>
         <view class='news-author'>
