--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -10,6 +10,7 @@
   margin-bottom: 40rpx;
   line-height: 42rpx;
   flex-direction: row;
+  opacity: 0.6;
 }
 .count {
   display: flex;
@@ -19,8 +20,15 @@
 .paragraph {
   padding: 10rpx;
   margin: 10rpx;
-  font-size: 35rpx;
+  font-size: 33rpx;
 }
 .image {
   width: 710rpx;
+}
+.date {
+  padding-left: 20rpx;
+}
+.text {
+  opacity: 0.8;
+  padding: 15rpx;
 }
